ecmascript/parser/tests/test262-error-references/fail/831b4a1caf3c5a06.js.stderr
error: Expected ), got =
 --> $DIR/tests/test262-parser/fail/831b4a1caf3c5a06.js:1:20
  |
1 | try { } catch ([a] = []) { }
  |                    ^

